[project]
name = "play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.0",
    "emoji>=2.14.1",
    "marimo>=0.15.5",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly[express]>=6.3.0",
    "polars>=1.33.1",
    "sqlglot>=27.14.0",
    "text-imp>=0.2.0.1",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]
